# rust-paris-transit-a-star

./: .gitignore  Cargo.toml  LICENSE  MELHORIAS-V1.md  README.md  RESUMO_APLICACAO.md
data/: tabela1_distancias_diretas.csv  tabela2_distancias_reais.csv  tabela_linhas_conexao.csv
metro_paris_astar/data/: tabela1_distancias_diretas.csv  tabela2_distancias_reais.csv  tabela_linhas_conexao.csv
metro_paris_astar/src/: algoritmo_a_estrela.rs  dados_metro.rs  grafo_metro.rs  main.rs
pacote_windows/: Executar_Metro_Paris.bat  INFORMACOES_TECNICAS.txt  README.txt
pacote_windows/data/: tabela1_distancias_diretas.csv  tabela2_distancias_reais.csv
src/: algoritmo_a_estrela.rs  algoritmo_a_estrela.rs.backup  aplicacao_gui.rs  dados_metro.rs  grafo_metro.rs  main.rs
src/egui/: app.rs  controls.rs  drawing.rs  mod.rs  navigation.rs  popups.rs  state_manager.rs  visual_effects.rs
