[package]
name = "metro_paris_astar"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"       # Para ler arquivos CSV
eframe = "0.31.1" # Para a interface gráfica com egui (framework)
egui = "0.31.1"   # Biblioteca de interface gráfica imediata

# Para Windows: compilação estática
[target.x86_64-pc-windows-gnu.dependencies]
winapi = { version = "0.3", features = ["everything"] }